WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138576
WK1: Text is getting selected even when an action menu fails to invoke
https://bugs.webkit.org/show_bug.cgi?id=138576
Summary
WK1: Text is getting selected even when an action menu fails to invoke
Beth Dakin
Reported
2014-11-10 13:40:27 PST
WK1: Text is getting selected even when an action menu fails to invoke
Attachments
Patch
(5.35 KB, patch)
2014-11-10 13:58 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-11-10 13:58:00 PST
Created
attachment 241304
[details]
Patch
Beth Dakin
Comment 2
2014-11-10 14:12:24 PST
Thanks Tim!
http://trac.webkit.org/changeset/175831
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug