WK1: Text is getting selected even when an action menu fails to invoke https://bugs.webkit.org/show_bug.cgi?id=138576 -and corresponding- rdar://problem/18931330

Reviewed by Tim Horton.

Selection changes should happen in willOpenMenu: instead of prepareForMenu:
* WebView/WebActionMenuController.h:
* WebView/WebActionMenuController.mm:
(-[WebActionMenuController prepareForMenu:withEvent:]):
(-[WebActionMenuController willOpenMenu:withEvent:]):

_selectLookupText no longer needs to return a BOOL indicating success or failure.
(-[WebActionMenuController _selectLookupText]):
(-[WebActionMenuController _defaultMenuItemsForHitTestResult:]):

Pass willOpenMenu: on to the controller.
* WebView/WebView.mm:
(-[WebView willOpenMenu:withEvent:]):



Canonical link: https://commits.webkit.org/156411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175831 268f45cc-cd09-0410-ab3c-d52691b4dbfc